--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "comment-box",
     "displayName": "Comment Box",
     "description": "Command that transforms one or multiple lines of text into a comment box.",
-    "version": "0.0.3",
+    "version": "0.0.4",
     "publisher": "SlySherZ",
     "repository": {
         "url": "https://github.com/SlySherZ/vscode-comment-box"
@@ -54,7 +54,7 @@
                 },
                 "commentBox.commentEndToken": {
                     "type": "string",
-                    "default": "/",
+                    "default": "*/",
                     "description": "Characters that end a multi-line comment for your current language."
                 },
                 "commentBox.topEdgeToken": {
@@ -100,14 +100,14 @@
         "test": "node ./node_modules/vscode/bin/test"
     },
     "devDependencies": {
-        "typescript": "^2.5.2",
-        "vscode": "^1.1.5",
+        "@types/mocha": "^2.2.48",
+        "@types/node": "^7.0.55",
+        "eslint": "^4.18.1",
         "mocha": "^3.5.0",
-        "eslint": "^4.6.1",
-        "@types/node": "^7.0.0",
-        "@types/mocha": "^2.2.42"
+        "typescript": "^2.7.2",
+        "vscode": "^1.1.10"
     },
     "dependencies": {
-        "vsce": "^1.36.1"
+        "vsce": "^1.37.5"
     }
 }
