--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "comment-box",
     "displayName": "Comment Box",
     "description": "Command that transforms one or multiple lines of text into a comment box.",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "publisher": "SlySherZ",
     "repository": {
         "url": "https://github.com/SlySherZ/vscode-comment-box"
@@ -41,6 +41,11 @@
                     ],
                     "default": "center",
                     "description": "When using a fixed width, controls how the text should be aligned. Can be: \n- \"center\" or \n- \"left\"."
+                },
+                "commentBox.boxWidth": {
+                    "type": "number",
+                    "default": 0,
+                    "description": "The width of the comment box. When set to 0, it will automatically pick the smallest possible value that wraps the selected text."
                 },
                 "commentBox.extendSelection": {
                     "type": "boolean",
@@ -87,15 +92,25 @@
                     "default": " *",
                     "description": "Characters that are used to draw the right edge of the box."
                 },
-                "commentBox.boxWidth": {
-                    "type": "number",
-                    "default": 0,
-                    "description": "The width of the comment box. When set to 0, it will automatically pick the smallest possible value that wraps the selected text."
-                },
                 "commentBox.fillingToken": {
                     "type": "string",
                     "default": " ",
                     "description": "When using a fixed width, controls the characters that are used to fill the extra space available."
+                },
+                "commentBox.removeEmptyLines": {
+                    "type": "boolean",
+                    "default": true,
+                    "description": "When set to 'true', skips drawing lines that are empty."
+                },
+                "commentBox.ignoreOuterIndentation": {
+                    "type": "boolean",
+                    "default": true,
+                    "description": "When set to 'false', the box is placed in a way that matches the indentation of the text being commented. Works best when 'extendSelection' is enabled."
+                },
+                "commentBox.ignoreInnerIndentation": {
+                    "type": "boolean",
+                    "default": true,
+                    "description": "When set to 'false', the text inside the box will keep the same relative indentation between the lines. Requires textAlignment to be set to 'left'."
                 }
             }
         }
