A few more documentation improvements.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "comment-box",
     "displayName": "Comment Box",
     "description": "Command that transforms one or multiple lines of text into a comment box.",
-    "version": "0.1.2",
+    "version": "1.0.0",
     "publisher": "SlySherZ",
     "repository": {
         "url": "https://github.com/SlySherZ/vscode-comment-box"
@@ -31,7 +31,7 @@
                 "commentBox.capitalize": {
                     "type": "boolean",
                     "default": true,
-                    "description": "Capitalizes the text."
+                    "description": "Capitalizes the text inside the box."
                 },
                 "commentBox.textAlignment": {
                     "type": "string",
@@ -40,12 +40,12 @@
                         "left"
                     ],
                     "default": "center",
-                    "description": "When using a fixed width, controls how the text should be aligned. Can be: \n- \"center\" or \n- \"left\"."
+                    "description": "Controls how the text should be aligned. Can be: \n- \"center\" or \n- \"left\"."
                 },
                 "commentBox.boxWidth": {
                     "type": "number",
                     "default": 0,
-                    "description": "The width of the comment box. When set to 0, it will automatically pick the smallest possible value that wraps the selected text."
+                    "description": "The width of the comment box. When set to 0, it will automatically pick the smallest possible value."
                 },
                 "commentBox.extendSelection": {
                     "type": "boolean",
@@ -55,12 +55,12 @@
                 "commentBox.commentStartToken": {
                     "type": "string",
                     "default": "/*",
-                    "description": "Characters that start a multi-line comment for your current language."
+                    "description": "Characters that start a multi-line comment for your current language. This also defines the top left corner of the box."
                 },
                 "commentBox.commentEndToken": {
                     "type": "string",
                     "default": "**/",
-                    "description": "Characters that end a multi-line comment for your current language."
+                    "description": "Characters that end a multi-line comment for your current language. This also defines the bottom right corner of the box."
                 },
                 "commentBox.topRightToken": {
                     "type": "string",
@@ -75,12 +75,12 @@
                 "commentBox.topEdgeToken": {
                     "type": "string",
                     "default": "*",
-                    "description": "Characters that are used to draw the top edge of the box."
+                    "description": "Characters that are used to draw top edge of the box. The entire top edge is skipped when this is set to an empty string."
                 },
                 "commentBox.bottomEdgeToken": {
                     "type": "string",
                     "default": "*",
-                    "description": "Characters that are used to draw the bottom edge of the box."
+                    "description": "Characters that are used to draw bottom edge of the box. The entire bottom edge is skipped when this is set to an empty string."
                 },
                 "commentBox.leftEdgeToken": {
                     "type": "string",
@@ -95,7 +95,7 @@
                 "commentBox.fillingToken": {
                     "type": "string",
                     "default": " ",
-                    "description": "When using a fixed width, controls the characters that are used to fill the extra space available."
+                    "description": "Characters that are used to fill the space between the text and the edges."
                 },
                 "commentBox.removeEmptyLines": {
                     "type": "boolean",
@@ -110,7 +110,7 @@
                 "commentBox.ignoreInnerIndentation": {
                     "type": "boolean",
                     "default": true,
-                    "description": "When set to 'false', the text inside the box will keep the same relative indentation between the lines. Requires textAlignment to be set to 'left'."
+                    "description": "When set to 'false', the text inside the box will keep the same relative indentation between the lines. Requires 'commentBox.textAlignment' to be set to 'left'."
                 }
             }
         }
