--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "Command that transforms one or multiple lines of text into a comment box.",
     "version": "1.0.0",
     "publisher": "SlySherZ",
+    "license": "MIT",
     "repository": {
         "url": "https://github.com/SlySherZ/vscode-comment-box"
     },
@@ -121,13 +122,13 @@
     },
     "devDependencies": {
         "@types/mocha": "^2.2.48",
-        "@types/node": "^7.0.66",
+        "@types/node": "^7.10.5",
         "eslint": "^4.19.1",
         "mocha": "^5.2.0",
         "typescript": "^2.9.2",
-        "vscode": "^1.1.18"
+        "vscode": "^1.1.33"
     },
     "dependencies": {
-        "vsce": "^1.42.0"
+        "vsce": "^1.59.0"
     }
 }
