--- a/package.json
+++ b/package.json
@@ -244,7 +244,5 @@
         "typescript": "^3.4.5",
         "vscode": "^1.1.33"
     },
-    "dependencies": {
-        "vsce": "^1.59.0"
-    }
+    "dependencies": {}
 }
