--- a/package.json
+++ b/package.json
@@ -234,16 +234,17 @@
         }
     },
     "scripts": {
-        "postinstall": "node ./node_modules/vscode/bin/install",
-        "test": "node ./node_modules/vscode/bin/test"
+        "test": "node ./test/runTest.js"
     },
     "devDependencies": {
-        "@types/mocha": "^5.2.6",
-        "@types/node": "^12.0.2",
-        "eslint": "^5.16.0",
-        "mocha": "^6.1.4",
-        "typescript": "^3.4.5",
-        "vscode": "^1.1.33"
-    },
-    "dependencies": {}
+        "@types/glob": "^7.1.1",
+        "@types/mocha": "^5.2.7",
+        "@types/node": "^12.11.7",
+        "@types/vscode": "^1.33.0",
+        "eslint": "^6.6.0",
+        "glob": "^7.1.5",
+        "mocha": "^6.2.2",
+        "typescript": "^3.6.4",
+        "vscode-test": "^1.2.2"
+    }
 }
