--- a/package.json
+++ b/package.json
@@ -234,17 +234,17 @@
         }
     },
     "scripts": {
-        "test": "node ./test/runTest.js"
+        "test": "node ./test/runTest.js --verbose"
     },
     "devDependencies": {
         "@types/glob": "^7.1.1",
         "@types/mocha": "^5.2.7",
-        "@types/node": "^12.11.7",
+        "@types/node": "^12.12.11",
         "@types/vscode": "^1.33.0",
         "eslint": "^6.6.0",
-        "glob": "^7.1.5",
+        "glob": "^7.1.6",
         "mocha": "^6.2.2",
-        "typescript": "^3.6.4",
-        "vscode-test": "^1.2.2"
+        "typescript": "^3.7.2",
+        "vscode-test": "^1.2.3"
     }
 }
