Temporarily remove windows builds from Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 os:
   - osx
   - linux
-  - windows
+#  - windows Disabled until support for this build improves
 
 node_js: 10
 
