--- a/package.json
+++ b/package.json
@@ -83,6 +83,11 @@
                                 "default": 0,
                                 "description": "The width of the comment box. When set to 0, it will automatically pick the smallest possible value."
                             },
+                            "maxEndColumn": {
+                                "type": "number",
+                                "default": 120,
+                                "description": "The max column where a comment box can end at. When set to 0, it can end anywhere."
+                            },
                             "extendSelection": {
                                 "type": "boolean",
                                 "default": true,
