add language awareness #2

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
                     "default": {
                         "defaultStyle": {}
                     },
+                    "scope": "language-overridable",
                     "additionalProperties": {
                         "type": "object",
                         "properties": {
