--- a/package.json
+++ b/package.json
@@ -299,7 +299,7 @@
         "glob": "^7.2.0",
         "mocha": "^9.1.2",
         "typescript": "^4.4.3",
-        "vscode-test": "^1.6.1"
+        "@vscode/test-electron": "^2.3.10"
     },
     "dependencies": {
         "string-width": "^4.2.2"
