--- a/package.json
+++ b/package.json
@@ -288,18 +288,16 @@
         }
     },
     "scripts": {
-        "test": "node ./test/runTest.js"
+        "test": "vscode-test"
     },
     "devDependencies": {
-        "@types/glob": "^7.1.4",
-        "@types/mocha": "^9.0.0",
-        "@types/node": "^16.10.1",
-        "@types/vscode": "^1.47.0",
-        "eslint": "^7.32.0",
-        "glob": "^7.2.0",
-        "mocha": "^9.1.2",
-        "typescript": "^4.4.3",
-        "@vscode/test-electron": "^2.3.10"
+        "@types/vscode": "^1.89.0",
+        "@types/mocha": "^10.0.6",
+        "@types/node": "18.x",
+        "eslint": "^8.57.0",
+        "typescript": "^5.4.5",
+        "@vscode/test-cli": "^0.0.9",
+        "@vscode/test-electron": "^2.3.9"
     },
     "dependencies": {
         "string-width": "^4.2.2"
